syntax = "proto3";

package api;

option go_package = "github.com/ethpandaops/tracoor/pkg/proto/tracoor/api";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message BeaconState {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue node = 2;
  google.protobuf.Timestamp fetched_at = 3 [json_name = "fetched_at"];
  google.protobuf.UInt64Value slot = 4;
  google.protobuf.UInt64Value epoch = 5;
  google.protobuf.StringValue state_root = 6 [json_name = "state_root"];
  google.protobuf.StringValue node_version = 7 [json_name = "node_version"];
  google.protobuf.StringValue network = 8;
}

service API {
  rpc ListBeaconState(ListBeaconStateRequest) returns (ListBeaconStateResponse) {}
  rpc ListUniqueBeaconStateValues(ListUniqueBeaconStateValuesRequest) returns (ListUniqueBeaconStateValuesResponse) {}
}

message ListBeaconStateRequest {
  string node = 1;
  uint64 slot = 2;
  uint64 epoch = 3;
  string state_root = 4 [json_name = "state_root"];
  string node_version = 5 [json_name = "node_version"];
  string network = 6;
  google.protobuf.Timestamp before = 7;
  google.protobuf.Timestamp after = 8;

  PaginationCursor pagination = 9;
}

message ListBeaconStateResponse {
  repeated BeaconState beacon_states = 1 [json_name = "beacon_states"];
}

message ListUniqueBeaconStateValuesRequest {
  enum Field {
    node = 0;
    slot = 1;
    epoch = 2;
    state_root = 3;
    node_version = 4;
    network = 5;
  }
  repeated Field fields = 1 [json_name = "fields"];
}

message ListUniqueBeaconStateValuesResponse {
  repeated string node = 1;
  repeated uint64 slot = 2;
  repeated uint64 epoch = 3;
  repeated string state_root = 4 [json_name = "state_root"];
  repeated string node_version = 5 [json_name = "node_version"];
  repeated string network = 6;
}

message PaginationCursor {
  int32 limit = 1;
  int32 offset = 2;
  string order_by = 3;
}